Set up db connection with pg and start GET route

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Koalla Holla</title>
-    <link rel="stylesheet" href="views/styles.css">
+    <title>Koala Holla</title>
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <!-- <link rel="stylesheet" href="views/styles.css"> -->
     <script defer src="scripts/client.js" charset="utf-8"></script>
   </head>
   <body>
     <header>
-      <img src="images/icon.png" class="icon" />
+      <img src="images/icon.png" style="width: 120px; height: 120px" class="icon" />
       <h1>Koala Holla</h1>
-      <h3>1976 Llama Comma Drive</h2>
+      <h2>1976 Llama Comma Drive</h2>
       <h3>Walla Walla, WA</h2>
     </header>
     <section id="addKoala">
