--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Koala Holla</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <!-- <link rel="stylesheet" href="views/styles.css"> -->
     <script defer src="scripts/client.js" charset="utf-8"></script>
