addKoala function post axios is running correctly.

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,7 +22,7 @@
       <input type="text" id="colorIn" value="" placeholder="Favorite Color">
       <input type="text" id="readyForTransferIn" value="" placeholder="Transfer">
       <input type="text" id="notesIn" value="" placeholder="Notes">
-      <button type="button" id="addButton">Add Koala</button>
+      <button type="button" id="addButton" onClick="addKoala()" >Add Koala</button>
     </section>
     <section>
       <h2>All Koalas</h2>
