--- a/server/public/index.html
+++ b/server/public/index.html
@@ -34,6 +34,7 @@
             <th>Favorite Color</th>
             <th>Ready for Transfer</th>
             <th>Notes</th>
+            <th>&nbsp;</th>
           </tr>
         </thead>
         <tbody id="viewKoalas">
