--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,7 +5,7 @@
     <title>Koala Holla</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-    <!-- <link rel="stylesheet" href="views/styles.css"> -->
+    <link rel="stylesheet" href="styles/style.css">
     <script defer src="scripts/client.js" charset="utf-8"></script>
   </head>
   <body>
